--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -376,6 +376,8 @@
         border-radius: .25rem;
         /*-webkit-appearance: none;*/
         font-size: 17px;
+        height: calc(1.5em + .75rem + 2px);
+        padding: .375rem 1.75rem .375rem .75rem;
     }
 
     .price-pro {
