--- a/Project_sem_3/Views/MedicalInsurance/Information.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Information.cshtml
@@ -73,7 +73,9 @@
                                 <div class="row">
                                     <label for="btnContinue" class="col-lg-4 col-sm-12 col-form-label col-form-label-first"></label>
                                     <div class="col-lg-5">
+                                        <a href=" /MedicalInsurance/Order">
                                         <input type="submit" name="ctl18$btnContinue" value="Tiếp tục" onclick="return checkvalidateOption();" id="ctl18_btnContinue" class="btn-pro hvr-forward" />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
