--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         <header class="site-header">
             <div class="top-header">
                 <div class="container">
-                    <a href="index.html" id="branding">
+                    <a href="/home/index" id="branding">
                         <img src="~/Content/images/logo.png" alt="Insurance Company" class="logo">
                         <div class="logo-text">
                             <h1 class="site-title">Insurance Company</h1>
