--- a/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
@@ -72,9 +72,9 @@
             @Html.DisplayFor(modelItem => item.UnitPrice)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ContractId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ContractId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ContractId })
         </td>
     </tr>
 }
