index life insurance

--- a/Project_sem_3/Views/Home/lifeInsurance.cshtml
+++ b/Project_sem_3/Views/Home/lifeInsurance.cshtml
@@ -4,5 +4,240 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>lifeInsurance</h2>
+<section>
+    <div class="banner">
 
+    </div>
+
+</section>
+
+<div class="container1" style="margin-left:10%;margin-right:10%;margin-top:5% ;margin-bottom:7%">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+
+            <div class="">
+                <div>
+                    <p>
+                        <div class="block_button myriad_pro_semibold"><a href="https://localhost:44362/LifeInsurance/Order">CHARGE & ORDER</a></div>
+                        <h1>WHOLE LIFE INSURANCE - MORE THAN LOVE</h1>
+                        <h3 class="font-text">HAPPINESS IS WHEN YOU ARE MADE SOMEBODY ELSE HAPPY</h3>
+
+                        <h2 class="text-primary">What is whole life insurance?</h2>
+                        <div style="margin-bottom:1%;"><span> As the name implies, whole life insurance covers you for your whole life, provided you continue to pay your premiums. Whole life insurance typically comes with guaranteed level premiums — the amount will never change as long as premiums are paid.</span></div>
+                        <div style="margin-bottom:2%;"><span> Whole life insurance policies pay death benefits (proceeds after death) and they may also build cash value.</span></div>
+                        <h2 class="text-primary" style="margin-top: 2%;">Life insurance packages:</h2>
+                    <p>1.<span style="margin-bottom:2%; color: crimson;"> Life peace.</span></p>
+                    <p>2.<span style="margin-bottom:2%; color: crimson;"> Inner peace.</span></p>
+                    <p style="margin-top: 2%;"><strong style="color: black;">Life peace: </strong></p>
+                    <ul>
+                        <li>Covered up to 200% of Sum Assured for 72 cancers and critical illnesses.</li>
+                        <li>Covered up to 300% of the insured against death risk.</li>
+                        <li>Get 30% immediate cash insurance at age 65.</li>
+                        <li>Premium-free benefits in the future immediately after the first cancer / critical illness benefit is paid.</li>
+                    </ul>
+                    <p style="margin-top: 2%;"><strong style="color: black;">Inner peace: </strong></p>
+                    <ul>
+                        <li>Diversified protection against accident risks and outside accidents.</li>
+                        <li>Guarantee of treatment expenses 24/7.</li>
+                        <li>Financial support many times before the risk of an accident.</li>
+                        <li>Refund up to 75% of closing fee at the end of the contract.</li>
+                    </ul>
+
+                </div>
+                @*<h2 class="text-primary" style="margin-top: 2%;">You should buy whole life insurance?</h2>
+                    <ul style="margin-left: 20px;">
+                        <li><span style="margin-bottom:2%">Portable protection for life</span></li>
+                        <li><span style="margin-bottom:2%">Level premiums that stay the same each year</span></li>
+                        <li><span style="margin-bottom:2%">Cash value you can use during your lifetime</span></li>
+                        <li><span style="margin-bottom:2%">Create a source of savings</span></li>
+                    </ul>*@
+
+                <table style="margin-top: 2%;">
+                    <tr>
+                        <th style="width:30%;color: blue;">Features</th>
+                        <th style="color: black;">Life peace</th>
+                        <th style="color: black;">Inner peace</th>
+                    </tr>
+                    <tr>
+                        <td>Age of participation</td>
+                        <td><p>From 15 - 60 years old</p></td>
+                        <td><p>From 18 - 65 years old</p></td>
+                    </tr>
+                    <tr>
+                        <td>Contract term</td>
+                        <td><p>Up to 75 years old</p></td>
+                        <td><p>5 or 10 years</p></td>
+                    </tr>
+                    <tr>
+                        <td>Premium time</td>
+                        <td><p>15 years</p></td>
+                        <td><p>By the contract term</p></td>
+                    </tr>
+                    <tr>
+                        <td>Serving needs</td>
+                        <td><p>Financial protection many times against the risk of serious illness</p></td>
+                        <td><p>Insurance against accident risks and hospital guarantee 24/7</p></td>
+                    </tr>
+                </table>
+
+                <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xsx-12">
+                        <div class="featured-number">
+                            <span class="featured-text">
+                                <strong>
+                                    Life
+                                    insurance
+                                </strong>
+                            </span><p class="featured-text1">Your family will be protected forever.</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xsx-12">
+                        <div class="featured-number"><span class="featured-text"><strong>Flexible</strong></span><p class="featured-text1">Flexible fee adjustment during participation.</p></div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xsx-12">
+                        <div class="featured-number"><span class="featured-text"><strong>500 million</strong></span><p class="featured-text1">Advance 50% Death benefit (up to 500 million VND) for end-stage Critical Illness.</p></div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xsx-12">
+                        <div class="featured-number"><span class="featured-text"><strong>5%</strong></span><p class="featured-text1">Opportunity to choose an auto insurance sum of 5% / year.</p></div>
+                    </div>
+                </div>
+                <iframe style="margin-top:15px" width="560" height="315" src="https://www.youtube.com/embed/FxKb--dYdMI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    <h2 style="margin-top: 2%; color: crimson;">Please contact us for a free consultation!</h2>
+                <div class="block_button myriad_pro_semibold"><a href="https://localhost:44362/LifeInsurance/Order">CHARGE & ORDER</a></div>
+                <div style="margin-top:30px;"></div>
+
+                <div>
+                    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fbaohiemtructuyen.com.vn%2F&width=174&layout=button_count&action=like&size=large&share=true&height=46&appId" width="174" height="46" style="        border: none;
+        overflow: hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+<style>
+    .font-text {
+        margin-top: -10px;
+        color: brown;
+    }
+
+    .featured-text {
+        display: block;
+        font-size: 35px;
+        font-weight: 700;
+        color: #153976;
+        line-height: 1;
+        margin-bottom: 15px;
+    }
+
+    .featured-text1 {
+        color: #2887ab;
+        margin: 0;
+    }
+
+    p {
+        color: black;
+    }
+
+    li {
+        margin-top: 2%;
+        background: url(https://baohiemtructuyen.com.vn/images/sub_menu_bullet.png) no-repeat 0 11px;
+        padding: 5px 0 5px 15px;
+        font-size: 17px;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
+    td {
+        padding: 15px;
+    }
+
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+        width: 100%;
+        border: 1px solid #ddd;
+    }
+
+    th, td {
+        text-align: center;
+        padding: 16px;
+    }
+
+        th:first-child, td:first-child {
+            text-align: left;
+        }
+
+    tr:nth-child(even) {
+        background-color: #f2f2f2
+    }
+
+    .subslide {
+        max-width: fit-content;
+        position: relative;
+        margin: auto;
+    }
+
+    .shadow {
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
+    }
+
+    .main-content {
+        padding-top: 20px;
+    }
+
+    .content_3col {
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        border-radius: 7px;
+        -moz-border-radius: 7px;
+        -webkit-border-radius: 7px;
+        padding: 15px 15px;
+        font-family: Tahoma;
+    }
+
+        .content_3col h1 {
+            color: #014346;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 18px;
+            padding-top: 0px;
+            padding-bottom: 10px;
+        }
+
+        .content_3col h2 {
+            color: #014346;
+            font-size: 14px;
+            font-weight: bold;
+            padding-top: 15px;
+            padding-bottom: 10px;
+        }
+
+    .block_button {
+        margin-top: 20px;
+        padding: 0px 0px 20px 0px;
+    }
+
+    .banner {
+        width: 100%;
+        height: 600px;
+        background-image: url(https://yesouisispace.com/wp-content/uploads/2018/02/7-Things-You-Need-to-Know-About-Life-Insurance.png);
+        background-position: center center;
+        background-size: cover;
+    }
+
+    .block_button a {
+        background: url(https://baohiemtructuyen.com.vn/images/content_block_button_bg.png);
+        color: #FFF;
+        font-size: 10px;
+        padding: 5px 7px 6px 36px;
+        text-transform: uppercase;
+    }
+
+    .myriad_pro_semibold a {
+        font-weight: bold;
+    }
+</style>
