--- a/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="Index">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/Admin/Admin">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -42,7 +42,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="Index">
+                <a class="nav-link" href="/Admin/Admin">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -143,30 +143,7 @@
                     <span>Contracts</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Admin/HouseInsurances">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Home Insurance</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="MotorInsurances">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Motor Insurance</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Medical Insurance</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Life Insurance</span>
-                </a>
-            </li>
+            
             <li class="nav-item">
                 <a class="nav-link" href="/Admin/Programmes">
                     <i class="fas fa-fw fa-table"></i>
