--- a/Project_sem_3/Areas/Admin/Views/HouseInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/HouseInsurances/Index.cshtml
@@ -7,6 +7,7 @@
 
 <!-- Custom styles for this page -->
 <link href="/Assets/admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+<link href="/Areas/Admin/Assets/css/custom.css" rel="stylesheet">
 <!-- Main Content -->
 <div id="content">
     <!-- Begin Page Content -->
@@ -47,9 +48,9 @@
                                                 <td>@item.Quantity</td>
                                                 <td>@item.UnitPrice</td>
                                                 <td>
-                                                    <button><@Html.ActionLink("Edit", "Edit", new {/* id=item.PrimaryKey */})</button>
-                                                    <button>@Html.ActionLink("Details", "Details", new {/* id=item.PrimaryKey */})</button>
-                                                    <button>@Html.ActionLink("Delete", "Delete", new {/* id=item.PrimaryKey */})</button>
+                                                    <button class="button button1">@Html.ActionLink("Edit", "Edit", new {id = item.ContractId})</button>
+                                                    <button class="button button2">@Html.ActionLink("Details", "Details", new {id = item.ContractId})</button>
+                                                    <button class="button button3">@Html.ActionLink("Delete", "Delete", new {id = item.ContractId})</button>
                                                 </td>
                                             </tr>
                                         }
