--- a/Project_sem_3/Areas/Admin/Views/Programmes/Create.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Create.cshtml
@@ -5,45 +5,85 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<link href="/Areas/Admin/Assets/css/custom.css" rel="stylesheet" />
 
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Programme</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+<div class="container">
+    <form action="/Admin/Programmes" method="post">
+        <div class="col-lg-9 col-md-8 col-sm-12">
+            <div class="box-border-pro">
+                <div class="frm frmpro">
+                    <div class="form-group">
+                        <h4>Enter the information programme</h4>
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name Programme:</label>
+                            <div class="col-lg-8">
+                                <input  type="text" id="ctl18_fullname" class="form-control txt" placeholder="Name programme" />
+                                <i class="pad-top-5">
+                                    <span id="ctl18_lblInsuredReq" class="req" style="color:Red;"></span>
+                                </i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price :</label>
+                            <div class="col-lg-8">
+                                <input  type="number" id="ctl18_txtAddress" class="form-control txt" placeholder="Price"></input>
+                                <i class="pad-top-5">
+                                    <span id="ctl18_lblAddressReq" class="req" style="color:Red;"></span>
+                                </i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <input type="submit" value="Create" class="btn btn-success" />
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    </form>
 </div>
+@*<h2>Create</h2>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            <h4>Programme</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }*@
