--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -6,14 +6,15 @@
 }
 
 <!-- Custom styles for this page -->
-<link href="/Assets/admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+<link href="/Assets/admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">    
+<link href="/Areas/Admin/Assets/css/custom.css" rel="stylesheet">
 <!-- Main Content -->
 <div id="content">
     <!-- Begin Page Content -->
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Contracts</h1>
+        <h1 class="h3 mb-2 text-gray-800">Programmes</h1>
         <p class="mb-4"> All contracts of customers about insurances .</p>
 
         <!-- DataTales Example -->
@@ -30,7 +31,6 @@
                                     <thead>
                                         <tr><th rowspan="1" colspan="1">Name</th><th rowspan="1" colspan="1">Price</th><th rowspan="1" colspan="1">Action</th></tr>
                                     </thead>
-
                                     <tbody>
 
                                         @foreach (var item in Model)
@@ -42,13 +42,12 @@
                                                 <td>@item.Price</td>
                                                 
                                                 <td>
-                                                    <button>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
-                                                    <button>@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
-                                                    <button>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+                                                    <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
+                                                    <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                                                    <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
                                                 </td>
                                             </tr>
                                         }
-
                                     </tbody>
                                 </table>
                             </div>
