--- a/Project_sem_3/Views/Home/About.cshtml
+++ b/Project_sem_3/Views/Home/About.cshtml
@@ -17,28 +17,28 @@
         <div class="fullwidth-block">
             <div class="container">
                 <h1 class="entry-title">Why you should choose us?</h1>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+                <p>Insurance.com.vn is an online website selling insurance products of BIDV Insurance Corporation (BIC). Products sold on the website are aimed at individual needs, ready to serve 24/7 to save time and effort for you.With baohiemtructuyen.com.vn website, your privacy and freedom of choice are guaranteed at the highest level. You will no longer have to receive unwanted offers, appointments to discuss insurance policies. You can simply access the website, find out information about insurance products, choose an insurance plan that suits you best. The purchase decision is entirely made by the customer.</p>
 
                 <div class="features">
                     <div class="feature-numbered">
                         <div class="num">1</div>
                         <h2 class="feature-title">Proin tempus</h2>
-                        <p> Proin tempus velit dui eu lobortis justo laoreet nec phasellus luctus elit neque eu aliquam velit dignissim donec porttitor.</p>
+                        <p>Working at universities, economic and financial research institutes. Their daily activities are document research.</p>
                     </div>
                     <div class="feature-numbered">
                         <div class="num">2</div>
                         <h2 class="feature-title">Proin tempus</h2>
-                        <p> Proin tempus velit dui eu lobortis justo laoreet nec phasellus luctus elit neque eu aliquam velit dignissim donec porttitor.</p>
+                        <p>Financial management officers of insurance companies: Doing the work of accounting, financial analysis, planning financial.</p>
                     </div>
                     <div class="feature-numbered">
                         <div class="num">3</div>
                         <h2 class="feature-title">Proin tempus</h2>
-                        <p> Proin tempus velit dui eu lobortis justo laoreet nec phasellus luctus elit neque eu aliquam velit dignissim donec porttitor.</p>
+                        <p> Calculating the cost of insurance services, determining financial investment strategies, risk statisticsfor insurance.</p>
                     </div>
                     <div class="feature-numbered">
                         <div class="num">4</div>
                         <h2 class="feature-title">Proin tempus</h2>
-                        <p> Proin tempus velit dui eu lobortis justo laoreet nec phasellus luctus elit neque eu aliquam velit dignissim donec porttitor.</p>
+                        <p> Research your customers' insurance needs, contact, negotiate and sign insurance contracts, issue applications.</p>
                     </div>
                 </div>
             </div> <!-- .container -->
@@ -47,11 +47,9 @@
         <div class="fullwidth-block" data-bg-color="#f1f1f1">
             <div class="container">
                 <h2 class="section-title">The history</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae leo ornare, fermentum libero eu, pharetra ante. Nunc consectetur pharetra tincidunt. Maecenas eget mattis ipsum. Quisque libero nisi, maximus id mauris non, imperdiet lacinia purus. Quisque a scelerisque quam, a finibus lectus.</p>
-
-                <p>Duis luctus a magna luctus elementum. Integer scelerisque, turpis eu placerat elementum, libero risus sodales lacus, ac vulputate quam dui eget risus. Cras vel luctus urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus luctus varius massa, ac faucibus sem posuere sit amet. Nunc nec fermentum mi. Etiam ultricies sit amet turpis vitae iaculis. Sed eget sem turpis. Morbi sodales nisi sem, pretium volutpat lectus ornare quis. Aenean vel ante enim.</p>
-
-                <p>Nam posuere purus vitae est sollicitudin placerat. Praesent posuere porta dignissim. Phasellus viverra, urna a convallis tincidunt, ante mi tempor turpis, nec tempor mauris ligula ut sapien. Etiam euismod mi eu ante mollis commodo. Suspendisse porta nisi vitae dui hendrerit, eget ornare orci semper. Phasellus pharetra, erat sit amet rutrum porttitor, est eros consectetur elit, molestie consequat erat tellus in dui. Vestibulum a vehicula sem. Nullam commodo quis purus in volutpat. Integer semper lacus a lorem efficitur auctor. Curabitur tincidunt, ligula non ultrices eleifend, felis leo ultrices quam, vitae congue risus dui a justo. Phasellus dapibus justo lacus, eget scelerisque libero iaculis sed. Maecenas ullamcorper sit amet dui nec efficitur.</p>
+                <p>Wherever and in any age, people must take risks. Risk and safety are two attributes of our lives. How to minimize risk? How do you master the risk? It is the eternal question of each individual, organization, state and society. So an economic branch was born, not only to help us solve the above problem, but also to become one of the driving forces stimulating the development of all other socio-economic fields. That is Insurance.</p>
+                <p>Today, in Vietnam, insurance is an attractive field for foreign investors. There have been and will be a series of domestic and international insurance companies. sectors: insurance, banking, investment fund management, securities, asset leasing and everywhere. Do not worry about the job, if you really meet the work requirements, you will become an expensive target of many domestic and international insurance companies.</p>
+                <p>Working in the insurance industry, you will enter a very exciting working environment with a high pace of international integration and in densely populated areas. This work requires you to be active in both thinking and action. You will not only work permanently in the office of the insurance company but also have to go to factories, factories, companies, households, banks, stock exchanges and even abroad to perform the Its transactions are delivered to you. This job is very interesting, requires high intellectual capacity and also very stressful. You will be paid in accordance with your contributions to the company and have the opportunity to continue training to become an insurance specialist, reputable financial specialist and a high position in your business and in social.</p>
             </div> <!-- .container -->
         </div> <!-- .fullwidth-block -->
 
