--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -3,12 +3,13 @@
     ViewBag.Title = "Index";
 }
 
-<section>
-    <div class="banner">
+    <section>
+       <div class="banner">
+            
+        </div>
+      
 
-    </div>
-
-</section>
+    </section>
 
 <div class="container1" style="margin-left:10%;margin-right:10%;margin-top:5% ;margin-bottom:7%">
 
@@ -26,10 +27,17 @@
             <div class="content_3col">
                 <div id="ctl19_divdetail">
                     <p>
-                        <div class="block_button top_button myriad_pro_semibold"><a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a></div>
-                        <h1 class="myriad_pro_semibold">HEALTH INSURANCE AND PERSONAL ACCIDENT</h1>
-                        <div style="display: block;  padding: 0px 10px 10px 10px;">
-                    <p>
+                        @*<div class="block_button top_button myriad_pro_semibold">
+                            <a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a></div>*@
+                        
+                        <button style="background-color:red;color:white" onclick="location.href='/MedicalInsurance/Order'" type="button">
+                          Charge & Order
+                        </button>
+                              <h1 class="myriad_pro_semibold">HEALTH INSURANCE AND PERSONAL ACCIDENT</h1>
+
+                         <div style="display: block;  padding: 0px 10px 10px 10px;"
+
+<p>
                         From February 15, 2020, BIDV Insurance Corporation issued another package of four new BIC Tam An health and personal accident insurance products. Some basic information of the new product is as follows:
                     </p>
                     <ul>
@@ -139,7 +147,11 @@
                         <div style="width: 50%; float: left;">
                         </div>
                         <div class="block_button myriad_pro_semibold">
-                            <a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a>
+
+                            @*<a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a>*@
+                            <button style="background-color:red;color:white" onclick="location.href='http://www.example.com'" type="button">
+                                Charge & Order
+
                         </div>
                     </div>
                     <div><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fbaohiemtructuyen.com.vn%2F&width=174&layout=button_count&action=like&size=large&share=true&height=46&appId" width="174" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
@@ -169,7 +181,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://www.bennetts.co.uk/-/media/default-website/bike-insurance/motorbike-insurance/whats-included/bennetts-ultimate-cover-banner.ashx?h=360&w=780&la=en&hash=93DA48B7B1A1A5A492766AF4D77DC194FF258290);
+        background-image: url(https://www.nextrongroup.com/upload/images/Push%20Pull%20Circular%20Connectors%20Application%20for%20Medical%20connector%20.jpg);
         background-position: center center;
         background-size: cover;
     }
@@ -207,8 +219,8 @@
         border-radius: 7px;
         -moz-border-radius: 7px;
         padding: 15px 15px;
-        font-family: Tahoma;
-        font-size: larger;
+        font-family: "Roboto Condensed", "Open Sans", sans-serif;
+        /*font-size: larger;*/
     }
 
     .block_button {
@@ -233,7 +245,7 @@
     }
 
     .content_3col h1 {
-        color: #014346;
+        color: #0f75bd;
         text-transform: uppercase;
         font-weight: bold;
         font-size: 18px;
@@ -246,7 +258,7 @@
     }
 
     .content_3col h2 {
-        color: #014346;
+        color: #485fc7;
         font-size: 14px;
         font-weight: bold;
         padding-top: 15px;
@@ -260,7 +272,7 @@
     }
 
     .content_3col h3 {
-        color: #014346;
+        color: #23527c;
         font-size: 12px;
         font-weight: bold;
         padding-top: 15px;
@@ -272,7 +284,7 @@
     }
 
     .sub-menuleft {
-        background-color: #0b665a;
+        background-color: #0f75bd;
         padding: 12px 10px;
         font-family: serif;
         font-size: 17px;
@@ -324,7 +336,7 @@
             display: block;
             border-bottom: dotted 1px #d7d7d7;
             font-size: 16px;
-            font-family: unset;
+            font-family: "Roboto Condensed", "Open Sans", sans-serif;
             padding-left: 20px;
         }
 </style>
